--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -17,7 +17,7 @@ platforms:
   driver:
     box: centos7
     box_check_update: true
-    box_url: file:///C:/Users/rkno/Documents/GitHub/np6_ag2_vmtemplates/virtualbox_vagrantbox/vagrantboxes/packer-centos7-virtualbox-iso.box
+    box_url: file:///H:/vagrantboxes/packer-centos7-virtualbox-iso.box
     vagrantfile_erb: Vagrantfile.erb
 
 - name: rhel7
@@ -25,7 +25,7 @@ platforms:
   driver:
     box: rhel7
     box_check_update: true
-    box_url: file:///C:/Users/rkno/Documents/GitHub/np6_ag2_vmtemplates/virtualbox_vagrantbox/vagrantboxes/packer-rhel7-virtualbox-iso.box
+    box_url: file:///H:/vagrantboxes/packer-rhel7-virtualbox-iso.box
     vagrantfile_erb: Vagrantfile.erb
 
 - name: centos6
@@ -33,7 +33,7 @@ platforms:
   driver:
     box: centos6
     box_check_update: true
-    box_url: file:///C:/Users/rkno/Documents/GitHub/np6_ag2_vmtemplates/virtualbox_vagrantbox/vagrantboxes/packer-centos6-virtualbox-iso.box
+    box_url: file:///H:/vagrantboxes/packer-centos6-virtualbox-iso.box
     vagrantfile_erb: Vagrantfile.erb
 
 - name: rhel6
@@ -41,7 +41,7 @@ platforms:
   driver:
     box: rhel6
     box_check_update: true
-    box_url: file:///C:/Users/rkno/Documents/GitHub/np6_ag2_vmtemplates/virtualbox_vagrantbox/vagrantboxes/packer-rhel6-virtualbox-iso.box
+    box_url: file:///H:/vagrantboxes/packer-rhel6-virtualbox-iso.box
     vagrantfile_erb: Vagrantfile.erb
 
 suites:
