--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -5,8 +5,8 @@ driver:
 provisioner:
   name: puppet_apply
   manifests_path: test
-  modules_path: modules
-  hiera_data_path: hieradata
+  modules_path: puppet/modules
+  hiera_data_path: puppet/hieradata
   require_chef_for_busser: false
   http_proxy: http://proxy.mms-dresden.de:8080
   https_proxy: http://proxy.mms-dresden.de:8080
