--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -19,6 +19,7 @@ platforms:
     box: centos7
     box_check_update: true
     box_url: file:///H:/vagrantboxes/packer-centos7-virtualbox-iso.box
+    provision: true
     vagrantfile_erb: Vagrantfile.erb
 
 - name: rhel7
@@ -27,6 +28,7 @@ platforms:
     box: rhel7
     box_check_update: true
     box_url: file:///H:/vagrantboxes/packer-rhel7-virtualbox-iso.box
+    provision: true
     vagrantfile_erb: Vagrantfile.erb
 
 - name: centos6
@@ -35,6 +37,7 @@ platforms:
     box: centos6
     box_check_update: true
     box_url: file:///H:/vagrantboxes/packer-centos6-virtualbox-iso.box
+    provision: true
     vagrantfile_erb: Vagrantfile.erb
 
 - name: rhel6
@@ -43,6 +46,7 @@ platforms:
     box: rhel6
     box_check_update: true
     box_url: file:///H:/vagrantboxes/packer-rhel6-virtualbox-iso.box
+    provision: true
     vagrantfile_erb: Vagrantfile.erb
 
 suites:
