change test-method, fix ASC-198

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
-.project
+/.project
 .kitchen/
-*.log
-modules/
+.tmp/
+.librarian/
 /.idea/
+/log/
+/.vagrant/
+/junit/
+*.iml
+Puppetfile.lock
+Gemfile.lock
