added tests for centos 8

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ matrix:
   - rvm: default
     env: PUPPET_VERSION="~> 4.0" BEAKER_set="docker-centos6-pc1"
   - rvm: default
+    env: PUPPET_VERSION="~> 4.0" BEAKER_set="docker-centos8-pc1"
+  - rvm: default
     env: PUPPET_VERSION="~> 4.0" BEAKER_set="docker-centos7-pc1" DEPLOY_TO_FORGE=yes
 deploy:
   provider: puppetforge
